bzr (2.5.0~beta3-2) UNRELEASED; urgency=low

  * Build-depend on python-paramiko, python-pycurl and python-gpgme for use in
    the testsuite.

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 10 Nov 2011 15:51:53 +0100

bzr (2.5.0~beta3-1) experimental; urgency=low

  * New upstream release.

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 10 Nov 2011 15:07:50 +0100

bzr (2.5.0~beta2-2) experimental; urgency=low

  * Fix bzrlib.osutils.local_concurrency() when used on GNU/kFreeBSD
    with Python's multiprocessing module available. Closes: #647690

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 07 Nov 2011 16:15:28 +0100

bzr (2.5.0~beta2-1) experimental; urgency=low

  * New upstream release.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 04 Nov 2011 23:32:32 +0100

bzr (2.5.0~beta1-2) experimental; urgency=low

  * Add Build-Conflicts to python-gpgme, to work around test suite
    failures.

 -- Jelmer Vernooij <jelmer@debian.org>  Tue, 20 Sep 2011 22:08:37 +0200

bzr (2.5.0~beta1-1) experimental; urgency=medium

  * New upstream release.
  * Move bzrtools from Recommends to Suggests.
  * Add python-gpgme-dbg to build dependencies.

 -- Jelmer Vernooij <jelmer@debian.org>  Tue, 06 Sep 2011 17:05:06 +0200

bzr (2.4.1-1) unstable; urgency=low

  * New upstream release.
   + Remove 04_fix_i18n, now applied upstream.

 -- Jelmer Vernooij <jelmer@vernstok.nl>  Tue, 13 Sep 2011 14:23:54 +0200

bzr (2.4.0-3) unstable; urgency=medium

  * Fix regression in open_write_stream, which breaks the bzr-builddeb
    testsuite. Closes: #638219, LP: #831351

 -- Jelmer Vernooij <jelmer@debian.org>  Wed, 31 Aug 2011 14:21:44 +0200

bzr (2.4.0-2) unstable; urgency=medium

  * Ignore permission denied errors when opening configuration files.
    LP: #837324, Closes: #639004

 -- Jelmer Vernooij <jelmer@debian.org>  Tue, 30 Aug 2011 14:12:41 +0200

bzr (2.4.0-1) unstable; urgency=low

  * New upstream release.
   + Suggest python-gpgme python-gpgme-dbg for new signatures features.